--- a/Server/package.json
+++ b/Server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "pandas": "^0.0.3"
   }
 }
